--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap");
+nav {
+  background-color: rgb(248, 95, 120);
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 30px;
+  align-items: center;
 }
-
-.App-link {
-  color: #61dafb;
+nav ul {
+  display: flex;
+  gap: 100px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav ul li {
+  list-style-type: none;
 }
+nav ul li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 30px;
+  position: relative;
+}
+nav ul li a::before {
+  content: "";
+  position: absolute;
+  width: 0px;
+  height: 2px;
+  background-color: #fff;
+  left: 0px;
+  bottom: -9px;
+  transition: 0.4s;
+}
+nav ul li a:hover::before {
+  width: 100%;
+}/*# sourceMappingURL=App.css.map */
