Added : FavoriteBlogs/RemoveFavoriteBlogs/globalBlogs

--- a/src/components/MyBlogs/blog.scss
+++ b/src/components/MyBlogs/blog.scss
@@ -24,19 +24,16 @@
   align-items: center;
   width: 60%;
   margin: 30px auto;
-  padding: 15px 70px;
+  padding: 24px 70px;
   font-family: "Poppins", sans-serif;
   color: #fff;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 10px;
   h1 {
     color: rgb(248, 95, 120);
+    width: 80%;
   }
-  p:nth-child(1) {
-    color: rgb(248, 95, 120);
-    margin-top: 20px;
-    cursor: pointer;
-  }
+
   p:nth-child(2) {
     font-size: 20px;
     color: grey;
@@ -44,6 +41,14 @@
   }
   p {
     color: black;
+  }
+}
+.see-details {
+  p {
+    color: rgb(248, 95, 120);
+    cursor: pointer;
+    text-align: center;
+    margin: 20px 0px;
   }
 }
 .filtered-main {
