--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -21,7 +21,7 @@
 .myblog-filtered p:nth-child(2) {
   font-size: 20px;
   color: grey;
-  margin-top: 20px;
+  margin: 20px 0px;
 }
 .myblog-filtered p {
   color: black;
