--- a/src/components/Details/Details.scss
+++ b/src/components/Details/Details.scss
@@ -20,7 +20,7 @@
   p:nth-child(2) {
     font-size: 20px;
     color: grey;
-    margin-top: 20px;
+    margin: 20px 0px;
   }
   p {
     color: black;
