--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,1 +1,27 @@
-/*# sourceMappingURL=home.css.map */
+.homepage h2 {
+  text-align: center;
+  color: rgb(248, 95, 120);
+  margin: 63px 0px;
+  font-size: 46px;
+}
+.homepage h3 {
+  color: rgb(248, 95, 120);
+  font-size: 16px;
+}
+
+.see-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.see-details svg {
+  color: rgb(248, 95, 120);
+  cursor: pointer;
+  text-align: center;
+  margin: 60px 0px 30px 0px;
+  font-size: 30px;
+}
+.see-details h3 {
+  color: rgb(248, 95, 120);
+  font-size: 16px;
+}/*# sourceMappingURL=home.css.map */
