--- a/src/components/MyBlogs/blog.css
+++ b/src/components/MyBlogs/blog.css
@@ -25,7 +25,7 @@
   align-items: center;
   width: 60%;
   margin: 30px auto;
-  padding: 15px 70px;
+  padding: 24px 70px;
   font-family: "Poppins", sans-serif;
   color: #fff;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -33,11 +33,7 @@
 }
 .myblog h1 {
   color: rgb(248, 95, 120);
-}
-.myblog p:nth-child(1) {
-  color: rgb(248, 95, 120);
-  margin-top: 20px;
-  cursor: pointer;
+  width: 80%;
 }
 .myblog p:nth-child(2) {
   font-size: 20px;
@@ -46,6 +42,13 @@
 }
 .myblog p {
   color: black;
+}
+
+.see-details p {
+  color: rgb(248, 95, 120);
+  cursor: pointer;
+  text-align: center;
+  margin: 20px 0px;
 }
 
 .filtered-main {
