--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@ nav {
   padding: 30px;
   align-items: center;
 }
+nav svg,
+nav h3 {
+  display: none;
+}
 nav ul {
   display: flex;
   gap: 100px;
@@ -16,7 +20,7 @@ nav ul li {
 nav ul li a {
   text-decoration: none;
   color: #fff;
-  font-size: 30px;
+  font-size: 26px;
   position: relative;
 }
 nav ul li a::before {
@@ -31,4 +35,53 @@ nav ul li a::before {
 }
 nav ul li a:hover::before {
   width: 100%;
+}
+
+@media screen and (max-width: 990px) {
+  body {
+    padding-top: 70px;
+  }
+  nav {
+    left: 0px;
+    top: 0px;
+    position: fixed;
+    width: 100%;
+  }
+  nav ul {
+    gap: 50px;
+  }
+  nav ul li a {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 590px) {
+  nav.mobilenav {
+    height: 300px;
+  }
+  nav {
+    text-align: center;
+    display: block;
+    transition: 0.6s;
+    overflow: hidden;
+    height: 50px;
+  }
+  nav h3 {
+    display: block;
+    color: #fff;
+    font-family: "Poppins", sans-serif;
+    margin: -10px 0px 30px 0px;
+  }
+  nav ul {
+    flex-direction: column;
+    gap: 30px;
+    text-align: center;
+  }
+  nav svg {
+    display: block;
+    position: absolute;
+    left: 30px;
+    top: 20px;
+    font-size: 25px;
+    color: #fff !important;
+  }
 }/*# sourceMappingURL=App.css.map */
