--- a/src/components/Details/Details.scss
+++ b/src/components/Details/Details.scss
@@ -9,6 +9,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  div:nth-child(1) {
+    overflow-wrap: break-word;
+    width: 77%;
+  }
   h1 {
     color: rgb(248, 95, 120);
   }
