--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -24,4 +24,51 @@
 .see-details h3 {
   color: rgb(248, 95, 120);
   font-size: 16px;
+}
+
+@media screen and (max-width: 1500px) {
+  .homepage {
+    padding: 0px 40px;
+  }
+  .homepage .myblog {
+    width: 80%;
+    text-align: center;
+  }
+  .homepage .myblog h1 {
+    margin: auto;
+  }
+}
+@media screen and (max-width: 990px) {
+  .homepage {
+    padding: 0px 40px;
+  }
+  .homepage .myblog {
+    width: 100%;
+    text-align: center;
+  }
+  .homepage .myblog h1 {
+    margin: auto;
+    font-size: 27px;
+    width: 100%;
+  }
+  .homepage .myblog p:nth-child(2) {
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 590px) {
+  .homepage {
+    padding: 0px 40px;
+  }
+  .homepage .myblog {
+    padding: 20px;
+    width: 100%;
+    text-align: center;
+  }
+  .homepage .myblog h1 {
+    margin: auto;
+    font-size: 22px;
+  }
+  .homepage .myblog p:nth-child(2) {
+    font-size: 15px;
+  }
 }/*# sourceMappingURL=home.css.map */
