--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -27,3 +27,52 @@
     font-size: 16px;
   }
 }
+
+@media screen and (max-width: 1500px) {
+  .homepage {
+    padding: 0px 40px;
+    .myblog {
+      width: 80%;
+      text-align: center;
+      h1 {
+        margin: auto;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 990px) {
+  .homepage {
+    padding: 0px 40px;
+    .myblog {
+      width: 100%;
+      text-align: center;
+      h1 {
+        margin: auto;
+        font-size: 27px;
+        width: 100%;
+      }
+      p:nth-child(2) {
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 590px) {
+  .homepage {
+    padding: 0px 40px;
+    .myblog {
+      padding: 20px;
+      width: 100%;
+      text-align: center;
+      h1 {
+        margin: auto;
+        font-size: 22px;
+      }
+      p:nth-child(2) {
+        font-size: 15px;
+      }
+    }
+  }
+}
